@@ -76,27 +76,31 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.TH DIFF 1 "12/5/04" "Heirloom Toolchest" "User Commands"
+.TH DIFF 1 "3/26/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 diff \- differential file comparator
 .SH SYNOPSIS
 .HP
+.nh
+.ad l
 \fBdiff\fR
-[\fB\-abBitw\fR]
+[\fB\-abBiptw\fR]
 [\fB\-cefhnu\fR]
 [\fB\-C\ \fInumber\fR]
 [\fB\-U\ \fInumber\fR]
 \fIfile1\fR \fIfile2\fR
 .HP
+.nh
+.ad l
 \fBdiff\fR
-[\fB\-abBitw\fR]
+[\fB\-abBiptw\fR]
 [\fB\-D\ \fIstring\fR]
 \fIfile1\fR \fIfile2\fR
 .HP
 .nh
 .ad l
 \fBdiff\fR
-[\fB\-abBiNtw12\fR]
+[\fB\-abBiNptw12\fR]
 [\fB\-lrs\fR]
 [\fB\-cefhnu\fR]
 [\fB\-C\ \fInumber\fR]
@@ -179,6 +183,19 @@ strings of whitespace to compare equal.
 .TP 10
 .B \-i
 ignores the case of letters.  E.g., ``A'' will compare equal to ``a''.
+.TP 10
+.B \-p
+causes the name of the surrounding C function,
+or, more exactly,
+of the first previous unchanged line
+beginning with a letter, the dollar sign, or the underscore,
+to be output with each set of changes.
+Implies
+.I \-c
+unless
+.I \-u
+is also present.
+This option is an extension.
 .TP 10
 .B \-t
 will expand tabs in output lines.  Normal,
